--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "next": "13.1.6",
+    "next-auth": "3.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
